--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,3 +14,7 @@ updates:
     commit-message:
       prefix: "build:"
     target-branch: "main"
+    groups:
+      "org.flywaydb":
+        patterns:
+          - "org.flywaydb*"
