--- a/src/main/resources/misc.yml
+++ b/src/main/resources/misc.yml
@@ -11,8 +11,12 @@ Scheduler:
     Restart-scheduled: '<scheduler> <green>Restart scheduled in <minutes> minutes.'
     Restart-seconds: '<scheduler> <green>Server is restarting in <seconds> seconds.'
     Restart-minutes: '<scheduler> <green>Server is restarting in <minutes> minutes.'
+    Restart-second: '<scheduler> <green>Server is restarting in <seconds> second.'
+    Restart-minute: '<scheduler> <green>Server is restarting in <minutes> minute.'
     Restart-now: '<scheduler> <green>Restarting the server...'
     Stop-scheduled: '<scheduler> <green>Stop scheduled in <minutes> minutes.'
     Stop-seconds: '<scheduler> <green>Server is stopping in <seconds> seconds.'
     Stop-minutes: '<scheduler> <green>Server is stopping in <minutes> minutes.'
+    Stop-second: '<scheduler> <green>Server is stopping in <seconds> second.'
+    Stop-minute: '<scheduler> <green>Server is stopping in <minutes> minute.'
     Stop-now: '<scheduler> <green>Stopping the server...'
